--- a/AutomatedEtherTransfer_Windows/packages.config
+++ b/AutomatedEtherTransfer_Windows/packages.config
@@ -2,9 +2,8 @@
 <packages>
   <package id="BouncyCastle" version="1.8.2" targetFramework="net471" />
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net471" />
-  <package id="CsvHelper" version="7.1.1" targetFramework="net471" />
-  <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net471" />
-  <package id="NBitcoin" version="4.1.1.34" targetFramework="net471" />
+  <package id="Microsoft.CSharp" version="4.0.1" targetFramework="net471" />
+  <package id="NBitcoin" version="4.1.1.10" targetFramework="net471" />
   <package id="Nethereum.ABI" version="2.5.1" targetFramework="net471" />
   <package id="Nethereum.Accounts" version="2.5.1" targetFramework="net471" />
   <package id="Nethereum.Contracts" version="2.5.1" targetFramework="net471" />
@@ -13,20 +12,20 @@
   <package id="Nethereum.JsonRpc.Client" version="2.5.1" targetFramework="net471" />
   <package id="Nethereum.JsonRpc.RpcClient" version="2.5.1" targetFramework="net471" />
   <package id="Nethereum.KeyStore" version="2.5.1" targetFramework="net471" />
+  <package id="Nethereum.Portable" version="2.5.1" targetFramework="net471" />
   <package id="Nethereum.RLP" version="2.5.1" targetFramework="net471" />
   <package id="Nethereum.RPC" version="2.5.1" targetFramework="net471" />
   <package id="Nethereum.Signer" version="2.5.1" targetFramework="net471" />
-  <package id="Nethereum.StandardTokenEIP20" version="2.5.1" targetFramework="net471" />
   <package id="Nethereum.Util" version="2.5.1" targetFramework="net471" />
   <package id="Nethereum.Web3" version="2.5.1" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net471" />
-  <package id="System.Buffers" version="4.5.0" targetFramework="net471" />
+  <package id="Portable.BouncyCastle" version="1.8.2" targetFramework="net471" />
   <package id="System.IO" version="4.3.0" targetFramework="net471" />
   <package id="System.Net.Http" version="4.3.3" targetFramework="net471" />
   <package id="System.Net.Requests" version="4.3.0" targetFramework="net471" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net471" />
-  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net471" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net471" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net471" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net471" />
-  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net471" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net471" />
 </packages>
