--- a/AutomatedEtherTransfer_Windows/packages.config
+++ b/AutomatedEtherTransfer_Windows/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="BouncyCastle" version="1.8.2" targetFramework="net471" />
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net471" />
+  <package id="CsvHelper" version="7.1.1" targetFramework="net471" />
   <package id="Microsoft.CSharp" version="4.0.1" targetFramework="net471" />
   <package id="NBitcoin" version="4.1.1.10" targetFramework="net471" />
   <package id="Nethereum.ABI" version="2.5.1" targetFramework="net471" />
